Sigil v0.1.3 <ADD DATE>
    - Implemented non-live View position synchronization; the Views are now synced
    by HTML element: moving the caret in one View will center the other View (upon switching)
    to the same HTML element that held the caret in the first View (issue #8)
    - newlines are now removed from TOC headings to avoid rendering problems in ADE (issue #96)
    - Sigil now creates a unique book identifier (if one is not provided by the user)
    using the UUID standard instead of a radnom sequence of characters and numbers;
    the old "SigilGEN" scheme is replaced with "UUID"
    - initial support for calibre interoperability (issue #94)
    - book updates from TOC editor are now faster and have a much smaller memory overhead
    - fixed issue with removing headings from TOC in TOC editor (issue #88, part 2 and issue #21);
    also made TOC editor updates to headings MUCH more robust
    - all headings are now by default included in TOC... heuristics for "guessing" which
    headings the users wants have been removed (issue #88, part 1)
    - fixed critical issue with Sigil hanging when loading certain SGF files (issue #87)
    - fixed rare issue with duplicate image loading (issue #86)
    - implemented a workaround for a webkit bug causing the first character of a heading
    created after a chapter break to be displayed incorrectly (issue #78)
    - the "makedmg" target for Macs is not build by default anymore and needs to be
    invoked directly; this was done to speed rebuilds
    - Macs now have a standard multiple document interface: opening a new file opens it
    in a new window, not in the old one (issue #22)
    - fixed a bug with warning dialog not informing the user of unsaved changes
    if he tried to load from the recent files list

Sigil v0.1.2 2009.08.12.
    - added the ability to specify the main publication identifier directly,
    through the "CustomID" basic metadata property (issue #3)